objects/Vote_User_Story__c.object
<CustomObject>
    <fields>
        <fullName>User_Story_Option__c</fullName>
        <label>User Story Option</label>
        <referenceTo>User_Story_Options__c</referenceTo>
        <relationshipLabel>Vote User Story</relationshipLabel>
        <relationshipName>Vote_User_Story</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vote_User_Story</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vote</label>
        <type>Checkbox</type>
    </fields>
    <label>Vote User Story</label>
    <nameField>
        <displayFormat>Vote-{0000}</displayFormat>
        <label>Vote User Story Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vote User Story</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>